--- a/css/main.css
+++ b/css/main.css
@@ -39,14 +39,59 @@ nav{
     color: white;
 }
 
-.thumbnail{
+.col-box{
     width: 100%;
-    height: 150px;
-    background-image: url(../assets/bora-bora.jpg);
-    background-position: center;
-    background-size: cover;
-    border-radius: 10px;
+    height: 350px;
+    text-align: center;
+    margin-top: 25px;
 }
+
+.content{
+    width: 100%;
+    height: 20px;
+    margin-top: 50px;
+    font-family: sans-serif;
+    padding-top: 160px;
+}
+
+.button-group{
+    width: 100%;
+    height: 50px;
+}
+.button{
+    width: 307px;
+    height: 40px;
+    text-align: center;
+    padding-top: 7px;
+    font-weight: bold;
+    float: left;
+    margin-top: 10px;
+    border-radius: 5px;
+    margin-right: 10px;
+}
+.normal{
+    background-color: #2b2b2b;
+    color: #ffffff;
+    
+}
+.inverted{
+    border: 2px solid #2b2b2b;
+    padding-top: 5px !important;
+}
+.normal:hover{
+    cursor: pointer;
+    background-color: #ffffff;
+    color: #2b2b2b;
+    border: 2px solid #2b2b2b;
+    padding-top: 5px !important;
+}
+.inverted:hover{
+    cursor: pointer;
+    background-color: #2b2b2b;
+    color: white;
+}
+
+
 
 .bora{
     width: 100%;
@@ -84,42 +129,50 @@ nav{
     border-radius: 10px;
 }
 
-.col-box{
-    width: 100%;
-    height: 350px;
+
+
+form{
+    width: 50%;
+    background-color: #ffffff;
+    margin: 0 auto;
+    margin-top: 100px;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-top: 25px;
+    padding-bottom: 40px;
+    float: right;
     text-align: center;
-    margin-top: 25px;
 }
 
-.content{
+.input-elm{
     width: 100%;
-    height: 20px;
-    margin-top: 50px;
-    font-family: sans-serif;
-    padding-top: 160px;
-}
-
-.button-group{
-    width: 400px;
-    height: 50px;
-}
-.button{
-    width: 307px;
-    height: 40px;
-    text-align: center;
-    padding-top: 7px;
-    font-weight: bold;
-    float: left;
-    margin-top: 10px;
+    height: 35px;
     border-radius: 5px;
-    margin-right: 10px;
+    padding-left: 15px;
+    margin-top: 15px;
+    border: none;
+    background-color: #bdbdbd;
+}
+select, .normal{
+    width: 100% !important;
+
+}
+.overlay{
+    width: 250px;
+    height: 170px;
+    background-color: rgba(0,0,0,0.5);
+    padding-top: 80px;
+    opacity: 0%;
+}
+.overlay:hover{
+    cursor: pointer;
+    opacity: 1;
 }
 
-.normal{
-    background-color: #2b2b2b;
-    color: #ffffff;
-}
-.inverted{
-    border: 2px solid #2b2b2b;
-    padding-top: 5px !important;
+.icon{
+    width: 60px;
+    height: 60px;
+    background-color: crimson;
+    border-radius: 50%;
+    margin: 0 auto;
 }
